# Anima-Pro

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
apps/: main.cpp
include/: Anima.h  Canvas.h  Engine.h  InputHandler.h  Timeline.h  Viewport.h
src/: CMakeLists.txt
src/core/: Canvas.cpp  Engine.cpp  InputHandler.cpp
src/resources/: resources.rc
src/ui/: Canvas.cpp  Styles.cpp  Viewport.cpp
